--- a/MyApplication/app/src/main/res/layout/activity_charcter_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_charcter_list.xml
@@ -3,17 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background ="@color/greybackground"
     android:layout_height="match_parent"
     tools:context=".CharcterListActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reclcview1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="168dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        android:scrollbars ="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/charlist_item">
+    </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
         android:id="@+id/MainTVinChars"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="80dp"
-        android:gravity="center"
-        android:text="Text"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="204dp"
+        android:text=""
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
