--- a/MyApplication/app/src/main/res/layout/activity_charcter_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_charcter_list.xml
@@ -8,17 +8,26 @@
     tools:context=".CharcterListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/reclcview1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="168dp"
+        android:id="@+id/recyclerView"
+        android:layout_width="388dp"
+        android:layout_height="437dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:scrollbars ="horizontal"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/charlist_item">
-    </androidx.recyclerview.widget.RecyclerView>
+        tools:listitem="@layout/charlist_item" />
+
+<ListView
+    android:id="@+id/ListView23"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"/>
+
+
 
     <TextView
         android:id="@+id/MainTVinChars"
