--- a/MyApplication/app/src/main/res/layout/charlist_item.xml
+++ b/MyApplication/app/src/main/res/layout/charlist_item.xml
@@ -6,16 +6,18 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="52dp" />
+        android:id="@+id/textview_item1"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal"
+        android:text=""
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imagechar_item1"
         android:layout_width="52dp"
         android:layout_height="54dp"
         app:layout_constraintStart_toStartOf="parent"
