--- a/MyApplication/app/src/main/res/layout/activity_charcter_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_charcter_list.xml
@@ -7,35 +7,34 @@
     android:layout_height="match_parent"
     tools:context=".CharcterListActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="388dp"
-        android:layout_height="437dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/charlist_item" />
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/recyclerView"-->
+<!--        android:layout_width="236dp"-->
+<!--        android:layout_height="261dp"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:layout_marginBottom="8dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="1.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:listitem="@layout/charlist_item" />-->
 
-<ListView
-    android:id="@+id/ListView23"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"/>
-
-
+<!--<ListView-->
+<!--    android:id="@+id/ListView23"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="match_parent"/>-->
 
     <TextView
         android:id="@+id/MainTVinChars"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="204dp"
+        android:layout_width="285dp"
+        android:layout_height="162dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="60dp"
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
