--- a/MyApplication/app/src/main/res/layout/activity_charelem.xml
+++ b/MyApplication/app/src/main/res/layout/activity_charelem.xml
@@ -77,4 +77,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/geoelement1_foreground" />
 
+    <TextView
+        android:id="@+id/elListtextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="80dp"
+        android:text=""
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
